feat: add watcher

--- a/blog/components/header/index.html
+++ b/blog/components/header/index.html
@@ -1,24 +1,23 @@
 <header>
   <nav class="navbar">
     <div class="navbar-brand">
-      <a class="navbar-logo" href="/">Mi Blog</a>
+      <a class="navbar-logo" href="/">Mi Baaaalog</a>
     </div>
     <ul class="navbar-menu">
       <li class="navbar-item">
-        <a class="navbar-link" href="/">Inicio</a>
+        <a class="navbar-link" href="/">Inicssssio</a>
       </li>
       <li class="navbar-item">
         <a class="navbar-link" href="/categorias">Categorías</a>
       </li>
       <li class="navbar-item">
-        <a class="navbar-link" href="/acerca-de">Acerca de</a>
+        <a class="navbar-link" href="/acerca-de">Acersssca de</a>
       </li>
       <li class="navbar-item">
-        <a class="navbar-link" href="/contacto">Contacto</a>
+        <a class="navbar-link" href="/contacto">Codddntacto</a>
       </li>
     </ul>
     <path\posts>
-
   </nav>
 </header>
 
