--- a/blog/layout/posts/index.html
+++ b/blog/layout/posts/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <path\components\header>
   <body>
-    <h1>Esto es una prueba</h1>
+    <path\components\header>
+    <h1>Esto es una passsssrueba</h1>
     <path\posts>
     <path\posts>
     <path\posts>
