test: Agrego data de prueba

--- a/blog/components/header/index.html
+++ b/blog/components/header/index.html
@@ -1,7 +1,7 @@
 <header>
   <nav class="navbar">
     <div class="navbar-brand">
-      <a class="navbar-logo" href="/">Mi Baaaalog</a>
+      <a class="navbar-logo" href="/">Mi Baglog12312</a>
     </div>
     <ul class="navbar-menu">
       <li class="navbar-item">
