refactor: refactor folder structure

--- a/src/template/components/header/index.html
+++ b/src/template/components/header/index.html
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <header>
+<header>
   <nav class="navbar">
     <div class="navbar-brand">
-      <a class="navbar-logo" href="/">Mi Baaaalog</a>
+      <a class="navbar-logo" href="/">Mi Baglog12312</a>
     </div>
     <ul class="navbar-menu">
       <li class="navbar-item">
@@ -25,14 +17,6 @@
         <a class="navbar-link" href="/contacto">Codddntacto</a>
       </li>
     </ul>
-    <ul>
-  <li>a</li>
-  <li>b</li>
-  <li>c</li>
-  <li>d</li>
-</ul>
-s
-
   </nav>
 </header>
 
@@ -74,31 +58,3 @@ s
     color: #333;
   }
 </style>
-
-    <h1>Esto es una passsssrueba</h1>
-    <ul>
-  <li>a</li>
-  <li>b</li>
-  <li>c</li>
-  <li>d</li>
-</ul>
-s
-
-    <ul>
-  <li>a</li>
-  <li>b</li>
-  <li>c</li>
-  <li>d</li>
-</ul>
-s
-
-    <ul>
-  <li>a</li>
-  <li>b</li>
-  <li>c</li>
-  <li>d</li>
-</ul>
-s
-
-  </body>
-</html>
