feat: add interpolation with slots

--- a/src/template/layout/index.html
+++ b/src/template/layout/index.html
@@ -1,7 +1,8 @@
-<ul>
-  <li>a</li>
-  <li>b</li>
-  <li>c</li>
-  <li>d</li>
-</ul>
-s
+<path\components\header> </path\components\header>
+
+Aca deberian de ir los indices:
+<path\components\individual-post-list
+  data="posts\index.json"
+  test-variable="sadasddsa"
+>
+</path\components\individual-post-list>
